@@ -1,4 +1,4 @@
-.TH "eix" "1" "$Date: 2012-12-28 09:00:00 +0200 (Fri, 28 Dec 2012)$" "@PACKAGE_STRING@" ""
+.TH "eix" "1" "$Date: 2012-12-28 15:00:00 +0200 (Fri, 28 Dec 2012)$" "@PACKAGE_STRING@" ""
 .\" {{{ НАЗВАНИЕ
 .SH "НАЗВАНИЕ"
 .B eix
@@ -207,6 +207,7 @@ The exit status is nonzero if I<VAR> is not known to eix (see B<--known-vars>)
 This is mainly intended for usage in scripts or for debugging purposes.
 If you use it in scripts you might want to specify B<PRINT_APPEND> to
 get trailing spaces (see description of B<PRINT_APPEND>).
+A special I<VAR> which can be accessed only in this way is B<USE.profile> which contains the profile's USE string.
 .TP
 .B --know-vars
 Print an alphabetical list of variables known to eix with B<--print>.
