@@ -3,6 +3,7 @@
 *eix-0.27.7
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Add --print-profile-paths
+	- Add --print USE.profile for profile's USE; USE is only make.conf's
 	- Honour RESTRICT_INSTALLED as documented
 	- Extend COLORFGBG_DARK default for rxvt-unicode with XPM support.
 	- eix-remote -q: Pass --no-verbose to wget,
